--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require": {
         "statamic/cms": "^5.0",
-        "rapidez/statamic": "dev-master"
+        "rapidez/statamic": "*"
     },
     "require-dev": {
         "orchestra/testbench": "^9.0"
