--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
         }
     },
     "require": {
-        "statamic/cms": "^5.0",
-        "rapidez/statamic": "*"
+        "mailerlite/laravel-elasticsearch": "^11.2",
+        "rapidez/statamic": "*",
+        "statamic/cms": "^5.0"
     },
     "require-dev": {
         "laravel/pint": "^1.22",
