--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
         }
     },
     "require": {
-        "statamic/cms": "^5.0",
-        "rapidez/statamic": "*"
+        "rapidez/core": "^2.25.0|^3.10.0",
+        "rapidez/statamic": "^4.0",
+        "statamic/cms": "^5.0"
     },
     "require-dev": {
         "laravel/pint": "^1.22",
