--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
         }
     },
     "require": {
-        "rapidez/core": "^2.25.0|^3.10.0",
-        "rapidez/statamic": "^4.0",
-        "mailerlite/laravel-elasticsearch": "^11.2",
+        "elasticsearch/elasticsearch": "^8.19",
+        "rapidez/core": "^4.0",
+        "rapidez/statamic": "^5.0",
         "statamic/cms": "^5.0"
     },
     "require-dev": {
